--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const envVariable = import.meta.env.PUBLIC_ENV_VARIABLE
 ---
 
 <html lang="en">
@@ -10,7 +10,8 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
+	<body> 
 		<h1>Astro</h1>
+		{envVariable}
 	</body>
 </html>
